2008-05-01  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-dir-mode-map): Don't bind "r".

2008-05-01  John Paul Wallington  <jpw@pobox.com>

	* ibuffer.el (ibuffer-last-sorting-mode): New variable.
	(ibuffer-do-sort-by-recency): Reverse sorting order if last
	sorting mode was recency.

	* ibuf-macs.el (define-ibuffer-sorter): Define the sorter to
	reverse sorting order if last sorting mode was the sorter's.

2008-05-01  Jason Rumney  <jasonr@gnu.org>

	* w32-fns.el (w32-charset-info-alist): Map vietnamese to windows-1258.

2008-04-30  John Paul Wallington  <jpw@pobox.com>

	* ibuffer.el (define-ibuffer-column filename): When the major mode
	is `vc-dir-mode' show the buffer's default directory.

	* ibuf-ext.el (define-ibuffer-filter filename): Likewise when the
	major mode is `vc-dir-mode' use the buffer's default directory.

2008-04-30  Sam Steingold  <sds@gnu.org>

	* vc.el (vc-dir-delete-file): Add.
	(vc-dir-mode-map): Bind "r" to vc-dir-delete-file, like in PCL-CVS.
	(vc-delete-file): Do not barf when the file has been already deleted.

2008-04-30  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacs-lisp/lisp-mode.el (lisp-mode-map): Add menu.

2008-04-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/octave-mod.el (octave-help): New function.
	* progmodes/octave-hlp.el: Delete.
	* info-look.el (octave-mode): Add operator index.

	* vc.el (vc-checkout): Typo.

2008-04-30  Dan Nicolaescu  <dann@ics.uci.edu>

	* menu-bar.el (menu-bar-tools-menu): Reorder, place Games last.
	Add "..." in the appropriate places.

	* epa.el (epa-key-list-mode-map): Add more menu entries.
	Add "..." in the appropriate places.

	* dired.el (dired-mode-map): Add :help.

	* vc.el (vc-deduce-fileset): Add new parameter.
	(vc-dir-marked-only-files): New function.
	(vc-next-action): Don't ignore directories, look at the files
	inside them.
	(vc-dir-mode): Document how the mark/unmark commands work.

2008-04-30  Stefan Monnier  <monnier@iro.umontreal.ca>
